--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-project-1",
-  "homepage": "https://kulish89.github.io/demo-social-network/",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kulish89.github.io/demo-social-network",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
